--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,4 @@ yarn-error.log
 public/css
 public/js
 .idea
-storage/App/Vaccines/Locations.csv
-storage/App/Vaccines/Locations.zip
+storage/App/Vaccines
