--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/jetstream": "2.1.4",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "league/flysystem-cached-adapter": "~1.0",
         "maatwebsite/excel": "^3.1",
         "macellan/laravel-zip": "^1.0",
         "tightenco/ziggy": "^1.0"
